# KatalystEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  README.md  default.nix  derivation.nix  vcpkg.json
Engine/: CMakeLists.txt
Engine/Source/: Katalyst.h  KatalystPCH.cpp  KatalystPCH.h
Engine/Source/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Window.h
Engine/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Source/Layers/ImGuiLayer/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Utilities/: Log.cpp  Log.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: SandboxApp.cpp
